[tool.poetry]
name = "mobile-app"
version = "0.1.0"
description = ""
authors = ["Nikita <vomerff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
