[tool.poetry]
name = "mobile-app"
version = "0.1.0"
description = ""
authors = ["Nikita <vomerff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
psycopg-binary = "^3.1.12"
asyncpg = "^0.28.0"
psycopg = "^3.1.12"
pydantic-settings = "^2.0.3"
mypy = "^1.5.1"
pillow = "^10.0.1"
isort = "^5.12.0"
aioredis = "^2.0.1"
starlette-admin = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
